[package]
name = "crypto_god_rs"
version = "13.0.0"
edition = "2021"
authors = ["Crypto God AI"]
description = "Ultimate High-Frequency Crypto Trading Bot & Scanner (100% Rust)"
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Solana Ecosystem
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"

# Ethereum & MEV
ethers = "2.0"

# Web & API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Telegram Bot
teloxide = { version = "0.12", features = ["macros", "auto-send"] }

# Database & Caching
redis = "0.24"

# Utilities
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
